<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:id="@+id/hello"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textColor="#FFF"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold">
    </TextView>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_below="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="moveToSignUpPage"
        android:text="@string/sign_up"
        android:background="#FFF"/>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpBtn"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:onClick="moveToSignInPage"
        android:text="@string/sign_in"
        android:background="#FFF"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_below="@id/signInBtn"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        />

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/google_signin_btn"
        android:layout_below="@id/login_button"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="40dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_signin_btn"
        android:text="@string/signout"
        android:id="@+id/signout_btn"
        android:visibility="invisible"
        android:background="#FFF"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="100dp"
        >

    </Button>
</RelativeLayout>