<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInAct"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:id="@+id/hello"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textColor="#FFF"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userEmailET"
        android:layout_below="@id/hello"
        android:hint="@string/enter_the_user_email_here"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="25"
        android:nextFocusDown="@id/userPasswordET"
        android:textColorHint="#FFF"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:backgroundTintMode="src_atop"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userPasswordET"
        android:layout_below="@id/userEmailET"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_the_user_password_here"
        android:maxLength="20"
        android:maxLines="1"
        android:nextFocusDown="@id/signInUser"
        android:inputType="textPassword"
        android:textColorHint="#FFF"
        android:backgroundTintMode="src_atop"
        android:textStyle="bold"
        android:textColor="#FFF"
        />

    <TextView
        android:id="@+id/Forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPasswordET"
        android:layout_marginTop="40dp"
        android:text="Forget Password?"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:backgroundTintMode="src_atop"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signInUser"
        android:layout_below="@id/Forgetpassword"
        android:text="@string/sign_in_user"
        android:background="#FFF"
        android:layout_marginTop="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        />

    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/signInUserProgressBar"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible"
        />


</RelativeLayout>